src/sass/components/_offer.scss
@use '../abstract/' as a;

.offer {
	margin-bottom: 3.2em;

	&__text {
		margin-bottom: 3.2em;
		text-align: center;
	}

	&__box {
		display: flex;
		flex-direction: column;
		align-items: center;
		gap: 2.5em;
	}

	&__card {
		position: relative;
		width: 300px;
		min-height: 380px;
		border-radius: 7px;
		box-shadow: 0 1px 6px a.$color-grey-1;
		z-index: 10;

		&::before {
			content: '';
			position: absolute;
			top: 0;
			left: 0;
			min-height: 380px;
			width: 100%;
			box-shadow: 0 0 12px a.$color-grey-1;
			opacity: 0;
			transition: opacity 0.3s;
			z-index: -1;
		}

		&:hover::before {
			opacity: 1;
		}
	}
}

